--- a/src/app/components/pages/welcome/welcome.component.html
+++ b/src/app/components/pages/welcome/welcome.component.html
@@ -82,10 +82,13 @@
             <div class="card">
                 <div class="card-body p-0">
                     <div class="row mx-0">
-                        <div class="col-6 col-md-4 col-lg-3 border-end p-3" *ngFor='let car of _butler.cars$; let i = index' (click)="setPreview(car)" [hidden]="_butler.carTypeSeted && car.carType.name!=_butler.carType.name" >
+                        <div class="col-6 col-md-4 col-lg-3 border-end p-3" *ngFor='let car of _butler.cars$; let i = index' (click)="setPreview(car)" [hidden]="_butler.carTypeSeted && car.carType.name!=_butler.carType.name" style="cursor:pointer;">
                             <div class="position-relative">
                                 <div class="position-absolute start-0 top-0 z-index-1">
-                                    <div class="tag tag-small bg-theme text-white">
+                                    <div class="tag tag-small bg-theme text-white" [hidden]="car.vehicleStatus.name=='Nuevo'" >
+                                        {{car.vehicleStatus.name}}
+                                    </div>
+                                    <div class="tag tag-small bg-success text-black" [hidden]="car.vehicleStatus.name=='Usado'" >
                                         {{car.vehicleStatus.name}}
                                     </div>
                                 </div>
@@ -99,11 +102,19 @@
                                 </figure>
                                 <div class="row">
                                     <div class="col">
-                                        <p class="small"><small class="text-muted size-12">{{car.name}}</small><br />${{car.price}}</p>
+                                        <p class="small">
+                                            <small class="text-muted size-12">{{car.name}}</small>
+                                            <br />
+                                            Transmision: {{car.transmision.name}}
+                                            <br/>
+                                            ${{car.price | number :'1.0'}}  
+                                        </p>
                                     </div>
                                     <div class="col-auto px-0">
-                                        <button class="btn btn-sm btn-link text-color-theme">
-                                            <i class="bi bi-bag-plus"></i>
+                                        <button class="btn btn-sm  text-color-theme" style="cursor:none;">
+                                            {{car.fuelType.name}}
+                                            <!-- <i class="bi bi-bag-plus"></i> -->
+                                            
                                         </button>
                                     </div>
                                 </div>
